--- a/handtime-html/css/style.css
+++ b/handtime-html/css/style.css
@@ -910,7 +910,7 @@ a:focus {
 }
 
 .info_section .info_form form button:hover {
-  background-color: ##E9724C;
+  background-color: #E9724C;
 }
 
 .info_section .info_form .social_box {
